--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <img class=bal src="http://stayathome-syllabus.greenfox.academy/week03/assets/arrow.svg" alt="">
     </div>
     </div>
+    <div class=big>
     <img id=first>
+    </div>
     <div class=transparent>
         <h1 id=title></h1>
         <p id=desc></p>
