--- a/index.html
+++ b/index.html
@@ -24,13 +24,7 @@
             <img class=jobb src="http://stayathome-syllabus.greenfox.academy/week03/assets/arrow.svg" alt="">
         </div>
     </div>
-    <div id="thumb">
-      
-       
-    </div>
-
-
-
+    <div id="thumb"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="script.js"></script>
 </body>
